# Article-Bias-Prediction

./: .gitignore  Bias Classifier Presentation.pptx  README.md  bias_lstm_classifier.ipynb  bias_ordinal_roberta_classifier_full_run.html  bias_ordinal_roberta_classifier_full_run.ipynb  classify_new_articles_ordinal_roberta.py  classify_new_articles_roberta_lstm_hybrid.py  export_new_article_projector_embeddings.py  lstm_roberta_new_articles_comparison.ipynb  pyproject.toml  requirements.txt  roberta_lstm_hybrid_bias_classifier_full_run.html  roberta_lstm_hybrid_bias_classifier_full_run.ipynb
Article-Bias-Prediction-New-Unstructured/: Article_pull_5-25_9_42__002_White_House_gunman_had_previous_run_ins_with_Secret_Service_court_documents_show.json  Article_pull_5-25_9_42__004_Large_scale_Russian_attack_on_Ukraine_leaves_four_dead_and_dozens_injured.json  Article_pull_5-25_9_42__005_Blistering_heat_Indians_warned_to_stay_indoors_as_temperatures_soar.json  Article_pull_5-25_9_42__007_Anger_grows_after_Chinas_deadliest_coal_mining_disaster_in_years.json  Article_pull_5-25_9_42__008_Clashes_as_Venezuelan_prisoners_protest_over_alleged_mistreatment.json  Article_pull_5-25_9_42__010_Senegals_leadership_row_mounts_as_parliament_speaker_resigns.json  Article_pull_5-25_9_42__012_Man_killed_in_shark_attack_off_Australias_north_east_coast.json  Article_pull_5-25_9_42__013_Blast_targeting_train_kills_at_least_20_in_Pakistan.json  Article_pull_5-25_9_42__015_Ebola_outbreak_poses_massive_challenges_warns_nurse.json  Article_pull_5-25_9_42__040_Why_does_Amazon_have_no_Western_rivals.json  (+1108 more)
(+15 files in other folders)
