[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bias-classifier"
version = "0.1.0"
description = "News article political-bias classification tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
ml = [
    "torch>=2.2",
    "transformers>=4.40",
    "safetensors>=0.4",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
bias-classify-new-articles = "bias_classifier.cli:main"
bias-classify-text = "bias_classifier.cli:classify_text_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
